--- a/src/main/resources/messages.yml
+++ b/src/main/resources/messages.yml
@@ -2,15 +2,21 @@
 prefix: '&eCustomText &6&l> &f'
 
 # Startup/Shutdown Messages
-loaded-commands: 'Loaded &b[amount] &ecommands from config.'
+loaded-commands: 'Loaded &b[amount] &fcommands from config.'
 plugin-enabled: 'Plugin enabled successfully.'
 plugin-disabled: 'The plugin has been disabled.'
 
 # General Error Messages
-config-failed-to-save: '&cThe config &e[config-name] &cfailed to save (IOException).'
+config-failed-to-save: '&cThe config &f[config-name] &cfailed to save (IOException).'
 
 # Command-Related Messages
 not-enough-arguments: '&cNot enough arguments.'
 no-permission: '&cYou don''t have permission to do that.'
-command-added: 'You added the command &b[command] &eto the plugin!'
-command-removed: 'You removed the command &c[command] &efrom the plugin!'
+command-added: 'You added the command &b[command] &fto the plugin!'
+command-removed: 'You removed the command &c[command] &ffrom the plugin!'
+configs-reloaded: 'Reloaded the configs.'
+list-message: 'Here are the current CustomText commands:'
+list-message-format: ' &7- &f/[command]'
+command-does-not-exist: '&cThat command doesn''t exist.'
+command-already-exists: '&cThat command already exists.'
+invalid-command: '&cInvalid command. Valid arguments are &breload, list, add &cand &bremove&c.'
